--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <p>cheeps form :0</p>
     <h1>Форма на замовлення пачки чипсів:</h1>
-    <form action="forms/confirm.html" method="post">
+    <form action="confirm.html" method="post">
         <label for="name">Прізвище Ім`я</label><br>
         <input type="text" id="name" name="name" required><br>
         <label for="surname">Прізвище</label><br>
