--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <option value="Chipster`s">Chipster`s</option>
             <option value="Estrella">Estrella</option>
         </select><br>
-        <input type="submit" value="Відправити дані для замовлення">
+        <input type="reset" value="Відправити дані для замовлення">
         <input type="reset" value="Відмінити замовлення">
         </form>
 </body>
